--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,10 @@
             <artifactId>activiti-json-converter</artifactId>
             <version>6.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
 
     </dependencies>
